crates/k-rust/tests/snapshots/inner_rules__infers_boolean_condition_variables_from_builtin_rule_syntax.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax A ::= \"a\" [symbol(a)]\n  rule a => a requires B\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "a(.KList)=>a(.KList)",
        requires: "#SemanticCastToBool(B)",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
