crates/k-rust/tests/snapshots/inner_rules__infers_shared_collection_values_at_kitem_instead_of_k.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Id ::= r\"[a-z]+\" [token]\n  syntax KItem ::= Id\n  syntax Map ::= \".Map\" [symbol(dotMap)]\n               | KItem \"|->\" KItem [symbol(mapEntry)]\n  syntax KItem ::= Map\n               | \"(\" KItem \")\" [bracket]\n  rule X:Id ~> (X |-> I) => I\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "#SemanticCastToId(X)~>mapEntry(#SemanticCastToId(X),#SemanticCastToKItem(I))=>#SemanticCastToKItem(I)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
