crates/k-rust/tests/snapshots/inner_rules__infers_the_tightest_shared_variable_sort.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= Int\n  syntax Pair ::= \"pair(\" Exp \",\" Int \")\" [symbol(pair)]\n  rule pair(X, X) => pair(X, X)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "pair(#SemanticCastToInt(X),#SemanticCastToInt(X))=>pair(#SemanticCastToInt(X),#SemanticCastToInt(X))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
