crates/k-rust/tests/snapshots/inner_rules__kitem_argument_rewrite_inside_a_bracket_is_decided_by_sort_inference.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax List ::= ListItem(KItem) [symbol(ListItem)]\n  rule ListItem((0 => 1))\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`ListItem`(#token(\"0\",\"Int\")=>#token(\"1\",\"Int\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
