crates/k-rust/tests/snapshots/inner_rules__kitem_argument_rewrite_of_concrete_sides.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax KItem ::= foo(Int) [symbol(foo)]\n  syntax KItem ::= wrap(KItem) [symbol(wrap)]\n  syntax List ::= ListItem(KItem) [symbol(ListItem)]\n                | List List [symbol(_List_)]\n                | \".List\" [symbol(.List)]\n  syntax Set ::= SetItem(KItem) [symbol(SetItem)]\n  rule ListItem(I:Int => 0)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`ListItem`(#SemanticCastToInt(I)=>#token(\"0\",\"Int\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
